--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-router": "0.0.1",
     "knex": "^0.95.1",
     "sqlite3": "^5.0.2"
   },
